.403
  - Fix references to ladybug-conf in docs
  - Modify die() handler to not hork on non-Error objects

.402
  - Re-work fix for self-ref tables

.401
  - Fix problem w/self-referential tables and add test case
  - Rewrote docs for ExtID and included several examples

.399_xxx
  - Rename project from OP to Devel::Ladybug
  - Remove deps and update dep versions
  - Disabled RCS support on OpenBSD for now

2009-10-17: .319
  - Add support + tests for PostgreSQL
  - Fixed ExtID support for non-InnoDB-backed classes + added tests
  - Cleaned up auto-detection, removed duplicate test code
  - Leaving dbPort undef (~) in .oprc will make OP use default port for
    specified dbi type
  - Add foreign key support for future versions of DBD::SQLite
  - Type::allowed($value) now returns true or throws an exception

2009-10-14: .318
  - Add support for cross-database foreign keys (just assert ExtID as usual)
  - Non-InnoDB classes won't try to use InnoDB for their linked tables (oops)
  - Run with hardcoded defaults if .oprc is not found
  - Automatically choose the "best" available backing store type
    on the local system, if no explicit __useYaml, __useDbi, or __dbiType
    values were given for a class
  - OP::Persistence - __selectBool(), __selectSingle() and __selectMulti()
    are now considered public and have been renamed to selectBool(),
    selectSingle() and selectMulti() (old names will work + warn for now)
  - More misc doc updates, tweaks, and fixes

2009-10-01: .317
  - Doc updates, more tweaks and fixes for RCS

2009-09-12: .316
  - Warn and disable RCS if binaries are not found (thx testers)

2009-09-10: .315
  - Most public methods with an "id" arg now accept either base64
    or string GUID forms
  - Gave RCS support some attention, added tests

2009-09-04: .314
  - Removed default of 0 for DateTime, will allow NULL instead
  - Split auxiliary datatypes off into their own distro
  - Split experimental packages off into their own distro