@@ -1,12 +1,43 @@
-This distribution has several dependencies, and is best installed from CPAN.
+INSTALLATION AND DEPENDENCIES
 
-  perl -MCPAN -e 'install Devel::Ladybug'
+  Ease of installation is one of Devel::Ladybug’s goals. The only
+  requirements are "gcc" (or equivalent) and a modern/working Perl 5
+  (5.8.8+). All other dependencies (listed in Makefile.PL) are handled by
+  CPAN, and generally install with no fuss.
 
-Assuming dependencies have been installed, this may also be done manually.
+  The recommended way to install Devel::Ladybug is via CPAN:
 
-  cd Devel-Ladybug-xxxx
-  perl Makefile.PL
-  make
-  make test
-  make install
+    perl −MCPAN −e 'install Devel::Ladybug'
+
+  Answer "yes" when prompted to install dependencies.
+
+  Devel::Ladybug does not depend on any particular DBI driver‐‐ the
+  package of your choice needs to be installed separately in order to be
+  usable by Devel::Ladybug as a backing store type. These include:
+  DBD::mysql, DBD::Pg, and DBD::SQLite.
+
+INSTALL PROBLEMS?
+
+  The most common installation problem is due to a compiler (gcc) not
+  being present on the local machine. After installing gcc, you may need
+  to purge the contents of the CPAN build directory (probably
+  ~root/.cpan/build), and re‐run the install command.
+
+  Refer to recent CPAN Testers results to see if Devel::Ladybug "should"
+  work with your particular software stack. Installation problems may be
+  reported to the author via email (please include the output from "make
+  test")
+
+    http://static.cpantesters.org/distro/D/Devel−Ladybug.html
+
+MANUAL INSTALL
+
+  Assuming dependencies have been installed, installation may also
+  be done manually:
+
+    cd Devel-Ladybug-xxxx
+    perl Makefile.PL
+    make
+    make test
+    make install
 
