@@ -1,6 +1,8 @@
 .403
   - Fix references to ladybug-conf in docs
   - Modify die() handler to not hork on non-Error objects
+  - Require 5.8.8+ in Makefile and Ladybug.pm
+  - Update installation docs
 
 .402
   - Re-work fix for self-ref tables
